--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,5 +8,7 @@
             name="weatherCurrent"
             type="com.midterm.weatherapp.model.WeatherCurrent" />
     </data>
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></RelativeLayout>
 </layout>
