--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
-    <data>
-        <variable
-            name="temp_curent"
-            type="com.midterm.weatherapp.model.WeatherCurrent" />
+<!--    <data>-->
+<!--        <variable-->
+<!--            name="weatherCurrent"-->
+<!--            type="com.midterm.weatherapp.model.WeatherCurrent" />-->
 
-    </data>
+<!--    </data>-->
     <RelativeLayout
         android:layout_width="match_parent"
 
@@ -22,7 +22,6 @@
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="70dp"
-            android:text="@{(String.valueOf(temp_curent.getTemperature().getTempInt()))}"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="100dp"
@@ -47,7 +46,7 @@
             android:layout_height="60dp"
             android:layout_below="@+id/temp"
             android:layout_centerHorizontal="true"
-            android:text="@{`Max Temp : `+(String.valueOf(temp_curent.getTemperature().getTempMax()))+`ºC`}"
+            android:text="@{`Max Temp : `+`ºC`}"
             android:textColor="@color/white"
             android:textAlignment="center"
 
@@ -68,7 +67,13 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="3dp"
             android:background="@drawable/ic_baseline_more_vert_24" />
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_hourly_forecast"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            ></androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
 
 
