--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
     </data>
     <RelativeLayout
         android:layout_width="match_parent"
-
         android:layout_height="match_parent"
         android:background="@drawable/lockscreens"
         >
@@ -53,21 +52,41 @@
 
             android:textSize="15dp"></TextView>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_add"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/ic_baseline_add_24"
 
             />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_more"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="3dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+
+
             android:background="@drawable/ic_baseline_more_vert_24" />
+
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="405dp"
+            android:paddingLeft="20dp"
+            android:text="Next 5 day"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="5dp" />
 
     </RelativeLayout>
 
