--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
-<!--    <data>-->
-<!--        <variable-->
-<!--            name="weatherCurrent"-->
-<!--            type="com.midterm.weatherapp.model.WeatherCurrent" />-->
-
-<!--    </data>-->
-    <RelativeLayout
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vp_main"
         android:layout_width="match_parent"
-
         android:layout_height="match_parent"
-        android:background="@drawable/lockscreens"
-        >
-
-        <TextView
-            android:id="@+id/temp"
-            android:layout_width="140dp"
-            android:layout_height="120dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="70dp"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="100dp"
-
-            ></TextView>
-
-        <TextView
-            android:id="@+id/temp2"
-            android:layout_width="160dp"
-            android:layout_height="120dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
-            android:text="ºC"
-            android:textAlignment="textEnd"
-            android:textColor="@color/white"
-            android:textSize="20dp"></TextView>
-
-
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="60dp"
-            android:layout_below="@+id/temp"
-            android:layout_centerHorizontal="true"
-            android:text="@{`Max Temp : `+`ºC`}"
-            android:textColor="@color/white"
-            android:textAlignment="center"
-
-            android:textSize="15dp"></TextView>
-
-        <Button
-            android:id="@+id/button_add"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/ic_baseline_add_24"
-
-            />
-
-        <Button
-            android:id="@+id/button_more"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="3dp"
-            android:background="@drawable/ic_baseline_more_vert_24" />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_hourly_forecast"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_centerInParent="true"
-            android:orientation="vertical"
-            ></androidx.recyclerview.widget.RecyclerView>
-    </RelativeLayout>
-
-
-</layout>
+        ></androidx.viewpager2.widget.ViewPager2>
+</RelativeLayout>
