--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -272,13 +272,14 @@
                 android:id="@+id/tv_daily_forecast_detail"
                 android:layout_width="180dp"
                 android:layout_height="30dp"
-                android:layout_marginRight="20dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="710dp"
-                android:text="Dự báo chi tiết năm ngày"
-                android:textSize="15dp"
+                android:layout_marginRight="20dp"
                 android:inputType="textMultiLine"
-                android:textColor="@color/white"></androidx.appcompat.widget.AppCompatTextView>
+                android:text="Dự báo chi tiết năm ngày"
+                android:textColor="@color/white"
+                android:textSize="15dp"></androidx.appcompat.widget.AppCompatTextView>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_daily_forecast"
