Add icon, update UI

--- a/app/src/main/res/layout/hourly_forecast_item.xml
+++ b/app/src/main/res/layout/hourly_forecast_item.xml
@@ -3,36 +3,46 @@
 
     <RelativeLayout
     android:layout_width="100dp"
-    android:layout_height="120dp">
+    android:layout_height="190dp"
+    android:background="@drawable/hourly_card">
+
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:textSize="13dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="1dp"
             android:text="Bây giờ"
             android:textAlignment="center"
-            ></TextView>
+            android:textColor="@color/white"
+            android:textSize="13dp"></TextView>
 
         <TextView
             android:id="@+id/tv_temp"
             android:layout_width="40dp"
             android:layout_height="30dp"
             android:layout_below="@+id/tv_time"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="11dp"
+            android:layout_marginEnd="29dp"
             android:text="32"
             android:textAlignment="textStart"
-            android:textColor="@color/black"
-            android:textSize="20dp"></TextView>
+            android:textColor="@color/white"
+            android:textSize="25dp"></TextView>
 
         <TextView
             android:id="@+id/tv_temp2"
             android:layout_width="40dp"
             android:layout_height="30dp"
             android:layout_below="@+id/tv_time"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="11dp"
+            android:layout_marginEnd="30dp"
             android:text="°C"
             android:textAlignment="textEnd"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="15dp"></TextView>
 
         <ImageView
@@ -40,15 +50,21 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_below="@+id/tv_temp"
-            android:layout_centerHorizontal="true"></ImageView>
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="25dp"></ImageView>
+
         <TextView
             android:id="@+id/tv_wind"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_below="@id/iv_icon"
-            android:textSize="13dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="1dp"
             android:text="9.3km/h"
             android:textAlignment="center"
-            ></TextView>
+            android:textColor="@color/white"
+            android:textSize="13dp"></TextView>
     </RelativeLayout>
     </layout>
