--- a/app/src/main/res/layout/activity_search_location.xml
+++ b/app/src/main/res/layout/activity_search_location.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.SearchLocationActivity">
+    tools:context=".view.SearchLocationActivity"
+    android:background="#548FCA">
+
     <androidx.appcompat.widget.SearchView
+        android:id="@+id/edt_search_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edt_search_location">
-    </androidx.appcompat.widget.SearchView>
+        ></androidx.appcompat.widget.SearchView>
     <ImageView
         android:id="@+id/icon_lon_lat"
         android:layout_width="30dp"
@@ -25,10 +27,10 @@
         android:layout_height="30dp"
         android:layout_marginTop="60dp"
         android:layout_toRightOf="@+id/icon_lon_lat"
-        android:textColor="@color/black"
+        android:text="     Use current location"
         android:textAlignment="viewStart"
-        android:textSize="20dp"
-        android:text="     Use current location"></androidx.appcompat.widget.AppCompatTextView>
+        android:textColor="@color/white"
+        android:textSize="20dp"></androidx.appcompat.widget.AppCompatTextView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_search_location"
