--- a/app/src/main/res/layout/daily_forecast_item.xml
+++ b/app/src/main/res/layout/daily_forecast_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="90dp"
     android:padding="5dp"
-    android:background="#51A2D5">
+    android:layout_marginTop="5dp"
+    android:background="@drawable/daily_item_card">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_day"
-        android:layout_width="110dp"
+        android:layout_width="90dp"
         android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:text="Chủ nhật"
         android:textColor="@color/white"
         android:textSize="20dp"></androidx.appcompat.widget.AppCompatTextView>
@@ -19,26 +20,25 @@
         android:id="@+id/tv_date"
         android:layout_width="100dp"
         android:layout_height="20dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="130dp"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="26dp"
         android:text="12-6"
         android:textColor="#C1FFFFFF"
         android:textSize="15dp"></androidx.appcompat.widget.AppCompatTextView>
 
     <ImageView
-        android:id="@+id/iv_dlicon"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="180dp"
-        android:background="@drawable/_01_s"></ImageView>
+        android:id="@+id/iv_icon"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="5dp"></ImageView>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_temp_max"
         android:layout_width="50dp"
         android:layout_height="40dp"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="280dp"
+        android:layout_marginTop="15dp"
         android:text="38"
         android:textColor="@color/white"
         android:textSize="25dp"></androidx.appcompat.widget.AppCompatTextView>
@@ -47,8 +47,8 @@
         android:id="@+id/tv_temp_min"
         android:layout_width="50dp"
         android:layout_height="40dp"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="320dp"
+        android:layout_marginTop="15dp"
         android:text="/ 26"
         android:textColor="#C1FFFFFF"
         android:textSize="25dp"></androidx.appcompat.widget.AppCompatTextView>
