update search current location

--- a/app/src/main/res/layout/fragment_daily_forecast.xml
+++ b/app/src/main/res/layout/fragment_daily_forecast.xml
@@ -119,12 +119,13 @@
                     android:textAlignment="textEnd"
                     android:textColor="@color/white"
                     ></TextView>
+
                 <View
-                    android:layout_below="@id/label_rain"
                     android:layout_width="370dp"
                     android:layout_height="2dp"
-                    android:background="#FFFFFF"
-                    android:layout_centerHorizontal="true"/>
+                    android:layout_below="@id/label_rain"
+                    android:layout_centerHorizontal="true"
+                    android:background="#FFFFFF" />
 
                 <TextView
                     android:id="@+id/label_hum"
