--- a/app/src/main/res/layout/activity_search_location.xml
+++ b/app/src/main/res/layout/activity_search_location.xml
@@ -5,36 +5,86 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.SearchLocationActivity"
-    android:background="#548FCA">
+    android:background="#CFDDEA">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/edt_search_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ></androidx.appcompat.widget.SearchView>
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#FFFFFF"></androidx.appcompat.widget.SearchView>
+
     <ImageView
+        android:layout_below="@id/edt_search_location"
         android:id="@+id/icon_lon_lat"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginLeft="10dp"
-        android:background="@drawable/ic_baseline_location_on_24"
-        ></ImageView>
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/icon_location_b"></ImageView>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_choice_lon_lat"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_below="@id/edt_search_location"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/icon_lon_lat"
-        android:text="     Use current location"
+        android:text=" Vị trí hiện tại"
         android:textAlignment="viewStart"
-        android:textColor="@color/white"
-        android:textSize="20dp"></androidx.appcompat.widget.AppCompatTextView>
+        android:textColor="@color/black"
+        android:textSize="15dp"></androidx.appcompat.widget.AppCompatTextView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_search_location"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="120dp"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/tv_choice_lon_lat"
+        android:background="#FFFFFF">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_choice_lon_lat2"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:text="   Vị trí đã thêm"
+            android:textAlignment="viewStart"
+            android:textColor="#737373"
+            android:textSize="10dp"></androidx.appcompat.widget.AppCompatTextView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_db_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_choice_lon_lat2"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"></androidx.recyclerview.widget.RecyclerView>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_choice_lon_lat3"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_below="@id/rcv_db_location"
+            android:layout_marginTop="20dp"
+            android:text=""
+            android:textAlignment="viewStart"
+            android:textColor="#737373"
+            android:textSize="10dp"></androidx.appcompat.widget.AppCompatTextView>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_search_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_choice_lon_lat3"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            ></androidx.recyclerview.widget.RecyclerView>
+
+    </RelativeLayout>
 </RelativeLayout>
